[project]
name = "grad-cam-presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
